whipsink: A GstBin implementation for WHIP
Fixes https://gitlab.freedesktop.org/gstreamer/gst-plugins-bad/-/issues/1410

Created a new plugin 'webrtchttp' to implement all the
WebRTC HTTP protocols under /net/webrtc-http directory.

WhipSink wraps around 'webrtcbin' with HTTP capabilites
to exchange SDP offer/answer so an ICE/DTLS session can
be established between the encoder/media producer (WHIP client)
and the broadcasting ingestion endpoint (Media Server).

Once the ICE/DTLS session is set up, the media will
flow unidirectionally from the WHIP client to the
broadcasting ingestion endpoint (Media Server).
Spec:
https://www.ietf.org/archive/id/draft-ietf-wish-whip-04.html

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [
     "net/onvif",
     "net/reqwest",
     "net/aws",
+    "net/webrtc-http",
     "utils/fallbackswitch",
     "utils/togglerecord",
     "utils/tracers",
@@ -53,6 +54,7 @@ default-members = [
     "net/raptorq",
     "net/reqwest",
     "net/aws",
+    "net/webrtc-http",
     "utils/fallbackswitch",
     "utils/togglerecord",
     "utils/tracers",
