--- a/generic/threadshare/Cargo.toml
+++ b/generic/threadshare/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2021"
 rust-version = "1.57"
 
 [dependencies]
-async-task = "4.0.3"
+async-task = "4.3.0"
 concurrent-queue = "1.2.2"
 flume = "0.10.13"
-futures = { version = "0.3.17", features = ["thread-pool"] }
+futures = "0.3.21"
 libc = "0.2"
 gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
@@ -22,7 +22,7 @@ once_cell = "1"
 pin-project-lite = "0.2.0"
 polling = "2.2.0"
 rand = "0.8"
-slab = "0.4.2"
+slab = "0.4.7"
 socket2 = {features = ["all"], version = "0.4"}
 waker-fn = "1.1"
 
