--- a/generic/threadshare/Cargo.toml
+++ b/generic/threadshare/Cargo.toml
@@ -26,6 +26,9 @@ slab = "0.4.7"
 socket2 = {features = ["all"], version = "0.4"}
 waker-fn = "1.1"
 
+# Used by examples
+clap = { version = "3.2", features = ["derive"], optional = true }
+
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["winsock2", "processthreadsapi"] }
 
@@ -49,6 +52,11 @@ path = "examples/udpsrc_benchmark_sender.rs"
 [[example]]
 name = "tcpclientsrc-benchmark-sender"
 path = "examples/tcpclientsrc_benchmark_sender.rs"
+
+[[example]]
+name = "standalone"
+path = "examples/standalone/main.rs"
+required-features = ["clap"]
 
 [build-dependencies]
 gst-plugin-version-helper = { path="../../version-helper" }
