--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ members = [
     "net/reqwest",
     "net/rtpav1",
     "net/webrtc-http",
+    "net/webrtc",
+    "net/webrtc/protocol",
+    "net/webrtc/signalling",
     "net/ndi",
     "text/ahead",
     "text/json",
@@ -57,6 +60,9 @@ default-members = [
     "net/reqwest",
     "net/rtpav1",
     "net/webrtc-http",
+    "net/webrtc/",
+    "net/webrtc/protocol",
+    "net/webrtc/signalling",
     "net/ndi",
     "text/ahead",
     "text/json",
