--- a/net/webrtc/signalling/Cargo.toml
+++ b/net/webrtc/signalling/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
 license = "MPL-2.0"
 description = "GStreamer WebRTC sink signalling server"
-repository = "https://github.com/centricular/webrtcsink/"
+repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 
 [dependencies]
 anyhow = "1"
