--- a/generic/file/Cargo.toml
+++ b/generic/file/Cargo.toml
@@ -25,6 +25,7 @@ gst-plugin-version-helper = { path="../../version-helper" }
 [features]
 static = []
 capi = []
+doc = ["gst/v1_18"]
 
 [package.metadata.capi]
 min_version = "0.8.0"
