--- a/meson_options.txt
+++ b/meson_options.txt
@@ -5,3 +5,7 @@ option('sodium', type : 'combo',
     description : 'Weither to use libsodium from the system or the built-in version from the sodiumoxide crate')
 option('csound', type : 'feature', value : 'auto', description : 'Build csound plugin')
 option('gtk4', type : 'feature', value : 'auto', description : 'Build GTK4 plugin')
+
+# Common options
+option('doc', type : 'feature', value : 'auto', yield: true,
+       description: 'Enable documentation.')
