--- a/net/reqwest/Cargo.toml
+++ b/net/reqwest/Cargo.toml
@@ -34,6 +34,7 @@ gst-plugin-version-helper = { path="../../version-helper" }
 [features]
 static = []
 capi = []
+doc = ["gst/v1_18"]
 
 [package.metadata.capi]
 min_version = "0.8.0"
