--- a/text/json/Cargo.toml
+++ b/text/json/Cargo.toml
@@ -33,6 +33,7 @@ package="gstreamer-check"
 default = ["gst/ser_de"]
 static = ["default"]
 capi = []
+doc = ["gst/v1_18"]
 
 [package.metadata.capi]
 min_version = "0.7.0"
