--- a/text/regex/Cargo.toml
+++ b/text/regex/Cargo.toml
@@ -31,6 +31,7 @@ package="gstreamer-check"
 [features]
 static = []
 capi = []
+doc = ["gst/v1_18"]
 
 [package.metadata.capi]
 min_version = "0.8.0"
