--- a/utils/tracers/Cargo.toml
+++ b/utils/tracers/Cargo.toml
@@ -27,6 +27,7 @@ gst-plugin-version-helper = { path="../../version-helper" }
 [features]
 static = []
 capi = []
+doc = ["gst/v1_18"]
 v1_22 = ["gst/v1_22"]
 
 [package.metadata.capi]
