--- a/video/closedcaption/Cargo.toml
+++ b/video/closedcaption/Cargo.toml
@@ -59,6 +59,7 @@ cc = "1.0"
 # We already use 1.16 which is new enough for static build
 static = []
 capi = []
+doc = ["gst/v1_18"]
 
 [package.metadata.capi]
 min_version = "0.8.0"
