--- a/video/rav1e/Cargo.toml
+++ b/video/rav1e/Cargo.toml
@@ -30,6 +30,7 @@ gst-plugin-version-helper = { path="../../version-helper" }
 default = ["hdr"]
 static = []
 capi = []
+doc = ["gst/v1_18"]
 asm = ["rav1e/asm"]
 hdr = ["gst-video/v1_18"]
 
