--- a/utils/togglerecord/Cargo.toml
+++ b/utils/togglerecord/Cargo.toml
@@ -12,7 +12,8 @@ rust-version = "1.63"
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gtk = { git = "https://github.com/gtk-rs/gtk3-rs", optional = true }
+gst-plugin-gtk4 = { path = "../../video/gtk4", optional = true }
+gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", optional = true }
 gio = { git = "https://github.com/gtk-rs/gtk-rs-core", optional = true }
 parking_lot = "0.12"
 once_cell = "1.0"
@@ -28,7 +29,7 @@ path = "src/lib.rs"
 [[example]]
 name = "gtk-recording"
 path = "examples/gtk_recording.rs"
-required-features = ["gtk", "gio"]
+required-features = ["gtk", "gio", "gst-plugin-gtk4"]
 
 [build-dependencies]
 gst-plugin-version-helper = { path="../../version-helper" }
