--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -177,10 +177,19 @@ test nightly:
 
 meson shared:
   extends: .meson
+  variables:
+    CI_ARTIFACTS_URL: "${CI_PROJECT_URL}/-/jobs/${CI_JOB_ID}/artifacts/raw/"
   script:
     - meson build --default-library=shared --prefix=$(pwd)/install
     - ninja -C build install
     - ./ci/check-plugins-installed.py install
+    - ninja -C build docs/gst_plugins_cache.json
+    - ci/check-documentation-diff.py
+  artifacts:
+    when: always
+    expire_in: "7 days"
+    paths:
+    - plugins-cache-diffs/
 
 meson static:
   extends: .meson
