ci: Make gst-build job manual on MRs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -207,6 +207,9 @@ gst-build:
   extends: .meson
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      when: 'manual'
+      allow_failure: true
   script:
     - P=$(pwd)
     - cd ..
