meson: Fix deprecation warning
meson.build_root() has been renamed to meson.global_build_root() to not
be confused with meson.project_build_root().

--- a/meson.build
+++ b/meson.build
@@ -203,7 +203,7 @@ rs_plugins = custom_target('gst-plugins-rs',
     'build',
     meson.current_build_dir(),
     meson.current_source_dir(),
-    meson.build_root(),
+    meson.global_build_root(),
     target,
     include,
     extra_env_str,
