--- a/net/webrtc-http/Cargo.toml
+++ b/net/webrtc-http/Cargo.toml
@@ -6,6 +6,7 @@ repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MPL-2.0"
 edition = "2021"
 description = "Plugin for WebRTC HTTP protocols"
+rust-version = "1.63"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
