--- a/video/videofx/Cargo.toml
+++ b/video/videofx/Cargo.toml
@@ -6,6 +6,7 @@ repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MPL-2.0"
 description = "Video Effects Plugin"
 edition = "2021"
+rust-version = "1.63"
 
 [dependencies]
 cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", features=["use_glib"] }
