ci: Fix running gst-inspect inside devenv
There are 2 gst-inspect-1.0 executables, one in root builddir and
another one in subprojects/gstreamer/tools/. The latter does not link on
gst-full, meson devenv is supposed to set the former first in PATH, but
it seems to be flicky.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -245,7 +245,7 @@ gst-build:
     # Check static Rust plugins can be linked into gst-full
     - meson build-gst-full --default-library=static $MESON_ARGS
     - ninja -C build-gst-full
-    - meson devenv -C build-gst-full gst-inspect-1.0 rsaudiofx
+    - meson devenv -C build-gst-full ./gst-inspect-1.0 rsaudiofx
   artifacts:
     expire_in: '7 days'
     when: always
