ts: add feature to add counters for performance evaluation
Add a `tuning` feature which adds counters that help with performance
evaluation. The only counter added so far accumulates the duration a
Scheduler has been parked, which is pretty accurate an indication of
CPU usage of the Scheduler.

--- a/generic/threadshare/Cargo.toml
+++ b/generic/threadshare/Cargo.toml
@@ -65,6 +65,8 @@ pkg-config = "0.3.15"
 [features]
 static = []
 capi = []
+# Adds performance counters used by benchmarking tools.
+tuning = []
 doc = ["gst/v1_18"]
 
 [package.metadata.capi]
