ci/windows: Build all the crates at once
In gst-rs we build each crate on its own, since not all
crates share the same features and some conflict with each other.

However currently, that isn't the case in plugins-rs and instead
we can be building all the crates with the same flags and simplify
the the script.

Close #241

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -268,12 +268,12 @@ gst-build:
     - '2022'
   parallel:
     matrix:
-      - FEATURES:
+      - CI_CARGO_FEATURES:
         - "--no-default-features"
         - "--all-features"
         - ""
   script:
-    - echo $env:FEATURES
+    - echo $env:CI_CARGO_FEATURES
 
     # Set the code page to UTF-8
     - chcp 65001
