ci/linux: also build with --no-default-features
Close #240

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -152,6 +152,8 @@ update-nightly:
     - G_DEBUG=fatal_warnings cargo test --locked --color=always --workspace --all-targets
     - cargo build --locked --color=always --workspace --all-targets --all-features
     - G_DEBUG=fatal_warnings cargo test --locked --color=always --workspace --all-targets --all-features
+    - cargo build --locked --color=always --workspace --all-targets --no-default-features
+    - G_DEBUG=fatal_warnings cargo test --locked --color=always --workspace --all-targets --no-default-features
 
 test msrv:
   extends:
