ci: declare the depencency between build jobs
This enables the pipeline to execute jobs asyncronously when
they are ready, regardless if the pipeline stage has finished.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -128,16 +128,19 @@ update-nightly:
   extends:
     - .dist-debian-container
     - .debian:11-stable
+  needs: ['build-stable']
 
 .img-msrv:
   extends:
     - .dist-debian-container
     - .debian:11-msrv
+  needs: ['build-msrv']
 
 .img-nightly:
   extends:
     - .dist-debian-container
     - .debian:11-nightly
+  needs: ['build-nightly']
 
 .cargo test:
   stage: "test"
@@ -264,6 +267,7 @@ gst-build:
 
 .msvc2019 build:
   stage: 'test'
+  needs: []
   tags:
     - 'docker'
     - 'windows'
