--- a/text/json/Cargo.toml
+++ b/text/json/Cargo.toml
@@ -16,7 +16,7 @@ serde_json = { version = "1.0", features = ["raw_value"] }
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
 package="gstreamer"
-features=["ser_de"]
+features=["serde"]
 
 [lib]
 name = "gstrsjson"
