ci: have build jobs depend on either build-* or update-* jobs
followup to 23c07d3c

When we trigger an update pipeline, instead of build-jobs we
replace them update-* jobs. In order for gitlab to not complain
add both of the jobs in the needs array, but mark them as optional
so either of them can be used depending on the usecase.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -128,19 +128,31 @@ update-nightly:
   extends:
     - .dist-debian-container
     - .debian:11-stable
-  needs: ['build-stable']
+  needs:
+    - job: 'build-stable'
+      optional: true
+    - job: 'update-stable'
+      optional: true
 
 .img-msrv:
   extends:
     - .dist-debian-container
     - .debian:11-msrv
-  needs: ['build-msrv']
+  needs:
+    - job: 'build-msrv'
+      optional: true
+    - job: 'update-msrv'
+      optional: true
 
 .img-nightly:
   extends:
     - .dist-debian-container
     - .debian:11-nightly
-  needs: ['build-nightly']
+  needs:
+    - job: 'build-nightly'
+      optional: true
+    - job: 'update-nightly'
+      optional: true
 
 .cargo test:
   stage: "test"
