--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,12 @@ include:
 variables:
   FDO_UPSTREAM_REPO: gstreamer/gst-plugins-rs
 
+  # We use GStreamer image to build the documentation as it is the simplest way
+  # to ensure that we are testing against the same thing as GStreamer itself.
+  #
+  # This shouldn't be updated so often, only when big updates happen in
+  # GStreamer itself
+  GSTREAMER_DOC_IMAGE: registry.freedesktop.org/gstreamer/gstreamer/amd64/fedora:2022-09-14.0-main
   WINDOWS_BASE: "registry.freedesktop.org/gstreamer/gstreamer-rs/windows"
   WINDOWS_RUST_MINIMUM_IMAGE: "$WINDOWS_BASE:$GST_RS_IMG_TAG-main-$GST_RS_MSRV"
   WINDOWS_RUST_STABLE_IMAGE: "$WINDOWS_BASE:$GST_RS_IMG_TAG-main-$GST_RS_STABLE"
@@ -232,6 +238,48 @@ meson static:
     expire_in: "7 days"
     paths:
     - 'build/meson-logs/'
+
+# Check that the gstreamer documentation keeps working
+documentation:
+  image: $GSTREAMER_DOC_IMAGE
+  variables:
+    MESON_ARGS: >
+      -Domx=disabled
+      -Dpython=disabled
+      -Dlibav=disabled
+      -Dlibnice=disabled
+      -Dugly=disabled
+      -Dbad=disabled
+      -Dgood=disabled
+      -Ddevtools=disabled
+      -Dges=disabled
+      -Drtsp_server=disabled
+      -Dvaapi=disabled
+      -Dsharp=disabled
+      -Dgst-examples=disabled
+      -Drs=enabled
+      -Dgst-plugins-rs:sodium=system
+      -Dgst-docs:fatal_warnings=true
+      -Ddoc=enabled
+      -Dbase=disabled
+      -Dbase=disabled
+      -Dorc=disabled
+  script:
+    - P=$(pwd)
+    - cd ..
+    - rm -rf gstreamer
+    - git clone --depth 1 https://gitlab.freedesktop.org/gstreamer/gstreamer.git --branch main
+    - cd gstreamer
+    - ln -s $P subprojects/gst-plugins-rs
+    - meson build $MESON_ARGS
+    - ./gst-env.py ninja -C build subprojects/gst-docs/GStreamer-doc
+    - mv build/subprojects/gst-docs/GStreamer-doc/html documentation/
+  artifacts:
+    expire_in: '7 days'
+    when: always
+    paths:
+      - documentation/
+  needs: []
 
 # build gst-plugins-rs as a gst-build subproject
 gst-build:
