--- a/net/rtpav1/Cargo.toml
+++ b/net/rtpav1/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gst-plugin-rtpav1"
-version = "0.1.0"
+version = "0.9.0-alpha.1"
 authors = ["Vivienne Watermeier <vwatermeier@igalia.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MPL-2.0"
