--- a/video/hsv/Cargo.toml
+++ b/video/hsv/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gst-plugin-hsv"
-version = "0.9.0"
+version = "0.9.0-alpha.1"
 authors = ["Julien Bardagi <julien.bardagi@gmail.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MIT OR Apache-2.0"
