--- a/net/onvif/Cargo.toml
+++ b/net/onvif/Cargo.toml
@@ -15,11 +15,11 @@ gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/g
 gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
 once_cell = "1.0"
 xmlparser = "0.13"
-minidom = "0.15"
 chrono = { version = "0.4", default-features = false }
 cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", features=["use_glib"] }
 pango = { git = "https://github.com/gtk-rs/gtk-rs-core" }
 pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core" }
+xmltree = "0.10"
 
 [lib]
 name = "gstrsonvif"
