--- a/net/ndi/Cargo.toml
+++ b/net/ndi/Cargo.toml
@@ -8,11 +8,11 @@ description = "NewTek NDI Plugin"
 edition = "2018"
 
 [dependencies]
-glib = "0.15"
-gst = { package = "gstreamer", version = "0.18", features = ["v1_12"] }
-gst-base = { package = "gstreamer-base", version = "0.18" }
-gst-audio = { package = "gstreamer-audio", version = "0.18" }
-gst-video = { package = "gstreamer-video", version = "0.18", features = ["v1_12"] }
+glib = { git = "https://github.com/gtk-rs/gtk-rs-core"}
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 byte-slice-cast = "1"
 once_cell = "1.0"
 byteorder = "1.0"
@@ -24,7 +24,7 @@ gst-plugin-version-helper = "0.7"
 [features]
 default = ["interlaced-fields", "reference-timestamps", "sink"]
 interlaced-fields = ["gst/v1_16", "gst-video/v1_16"]
-reference-timestamps = ["gst/v1_14"]
+reference-timestamps = []
 sink = ["gst/v1_18", "gst-base/v1_18"]
 advanced-sdk = []
 
