--- a/net/ndi/Cargo.toml
+++ b/net/ndi/Cargo.toml
@@ -19,12 +19,11 @@ byteorder = "1.0"
 atomic_refcell = "0.1"
 
 [build-dependencies]
-gst-plugin-version-helper = "0.7"
+gst-plugin-version-helper = { path = "../../version-helper" }
 
 [features]
-default = ["interlaced-fields", "reference-timestamps", "sink"]
+default = ["interlaced-fields", "sink"]
 interlaced-fields = ["gst/v1_16", "gst-video/v1_16"]
-reference-timestamps = []
 sink = ["gst/v1_18", "gst-base/v1_18"]
 advanced-sdk = []
 
