--- a/net/ndi/Cargo.toml
+++ b/net/ndi/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-ndi"
 version = "1.0.0"
 authors = ["Ruben Gonzalez <rubenrua@teltek.es>", "Daniel Vilar <daniel.peiteado@teltek.es>", "Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://github.com/teltek/gst-plugin-ndi"
-license = "LGPL"
+license = "MPL-2.0"
 description = "NewTek NDI Plugin"
 edition = "2018"
 
