ndi: Integrate into the build system

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ members = [
     "net/reqwest",
     "net/rtpav1",
     "net/webrtc-http",
+    "net/ndi",
     "text/ahead",
     "text/json",
     "text/regex",
