--- a/net/ndi/Cargo.toml
+++ b/net/ndi/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "gst-plugin-ndi"
-version = "1.0.0"
+version = "0.9.0-alpha.1"
 authors = ["Ruben Gonzalez <rubenrua@teltek.es>", "Daniel Vilar <daniel.peiteado@teltek.es>", "Sebastian Dröge <sebastian@centricular.com>"]
-repository = "https://github.com/teltek/gst-plugin-ndi"
+repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MPL-2.0"
 description = "NewTek NDI Plugin"
-edition = "2018"
+edition = "2021"
+rust-version = "1.63"
 
 [dependencies]
 glib = { git = "https://github.com/gtk-rs/gtk-rs-core"}
@@ -26,8 +27,24 @@ default = ["interlaced-fields", "sink"]
 interlaced-fields = ["gst/v1_16", "gst-video/v1_16"]
 sink = ["gst/v1_18", "gst-base/v1_18"]
 advanced-sdk = []
+static = []
+capi = []
+doc = ["gst/v1_18"]
 
 [lib]
 name = "gstndi"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
+
+[package.metadata.capi]
+min_version = "0.8.0"
+
+[package.metadata.capi.header]
+enabled = false
+
+[package.metadata.capi.library]
+install_subdir = "gstreamer-1.0"
+versioning = false
+
+[package.metadata.capi.pkg_config]
+requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-audio-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0, ndi"
