ndi: Implement dynamic loading of the NDI SDK
And build the plugin on the CI and via meson.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ default-members = [
     "net/reqwest",
     "net/rtpav1",
     "net/webrtc-http",
+    "net/ndi",
     "text/ahead",
     "text/json",
     "text/regex",
