--- a/net/ndi/Cargo.toml
+++ b/net/ndi/Cargo.toml
@@ -18,6 +18,7 @@ byte-slice-cast = "1"
 once_cell = "1.0"
 byteorder = "1.0"
 atomic_refcell = "0.1"
+libloading = "0.7"
 
 [build-dependencies]
 gst-plugin-version-helper = { path = "../../version-helper" }
@@ -47,4 +48,4 @@ install_subdir = "gstreamer-1.0"
 versioning = false
 
 [package.metadata.capi.pkg_config]
-requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-audio-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0, ndi"
+requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-audio-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
