--- a/net/aws/Cargo.toml
+++ b/net/aws/Cargo.toml
@@ -15,6 +15,7 @@ bytes = "1.0"
 futures = "0.3"
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
 aws-config = "0.49.0"
 aws-sdk-s3 = "0.19.0"
 aws-sdk-transcribe = "0.19.0"
