--- a/plugins/Cargo.toml
+++ b/plugins/Cargo.toml
@@ -35,8 +35,8 @@ human_bytes = "0.3.1"
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-log = "0.1"
-uuid = { version = "0.8", features = ["v4"] }
-clap = { version = "3.0.0-rc.1", features = ["derive"] }
+uuid = { version = "1", features = ["v4"] }
+clap = { version = "4", features = ["derive"] }
 
 [lib]
 name = "webrtcsink"
