webrtc: Add gstwebrtc-api subproject in net/webrtc plugin
This subproject adds a high-level web API compatible with GStreamer
webrtcsrc and webrtcsink elements and the corresponding signaling
server. It allows a perfect bidirectional communication between HTML5
WebRTC API and native GStreamer.

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/946>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -400,6 +400,16 @@ rustfmt:
     - cargo fmt --version
     - cargo fmt -- --color=always --check
 
+gstwebrtc-api lint:
+  image: node:lts
+  stage: "lint"
+  rules:
+    - when: 'always'
+  script:
+    - cd net/webrtc/gstwebrtc-api
+    - npm install
+    - npm run check
+
 check commits:
   extends: .img-stable
   stage: "lint"
